test/cli/validate-local-repository-bad4/expected
Error in support element in package.json
ENUM should be equal to one of the allowed values

> 1 | {"support":{"repository":{"type":"git","url":"https://github.com/pkgjs/support-separate-repo-other.git","directory":"subdir2","extra":"123"},"path":"./MySupportPackage.json"}}
    |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ ðŸ‘ˆðŸ½  enum should be equal to one of the allowed values

TYPE should be string

> 1 | {"support":{"repository":{"type":"git","url":"https://github.com/pkgjs/support-separate-repo-other.git","directory":"subdir2","extra":"123"},"path":"./MySupportPackage.json"}}
    |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ ðŸ‘ˆðŸ½  type should be string

ONEOF should match exactly one schema in oneOf

> 1 | {"support":{"repository":{"type":"git","url":"https://github.com/pkgjs/support-separate-repo-other.git","directory":"subdir2","extra":"123"},"path":"./MySupportPackage.json"}}
    |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ ðŸ‘ˆðŸ½  oneOf should match exactly one schema in oneOf

ADDTIONAL PROPERTY should NOT have additional properties

> 1 | {"support":{"repository":{"type":"git","url":"https://github.com/pkgjs/support-separate-repo-other.git","directory":"subdir2","extra":"123"},"path":"./MySupportPackage.json"}}
    |                                                                                                                               ^^^^^^^ ðŸ˜²  extra is not expected to be here!
